// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadType.value !== fcl 1`] = `
<TruckingDistancePanel
  cells={
    Array [
      Object {
        "lower_distance": "FOO_LOWER_DISTANCE",
        "table": Object {
          "0": Object {
            "value": "FOO_CELL_VALUE",
          },
        },
        "upper_distance": "FOO_UPPER_DISTANCE",
      },
    ]
  }
  currency={
    Object {
      "label": "FOO_CURRENCY_LABEL",
    }
  }
  handleFCLChange={[Function]}
  handleMinimumChange={[Function]}
  handleRateChange={[Function]}
  loadType="lcl"
  rateBasis={
    Object {
      "label": "FOO_RATEBASIS_LABEL",
    }
  }
  t={[Function]}
  theme={
    Object {
      "colors": Object {
        "primary": "#333",
        "secondary": "#fafafa",
      },
    }
  }
  weightSteps={
    Array [
      Object {
        "city": "FOO_CITY",
        "country": "FOO_COUNTRY",
        "max": "FOO_MAX",
        "min": "FOO_MIN",
      },
    ]
  }
>
  <div
    className="flex-100 layout-row layout-align-start-center layout-wrap"
    key="cell_0"
  >
    <div
      className="flex-50 layout-row layout-row layout-wrap layout-align-start-start"
    >
      <p
        className="flex-none"
      >
        Distance Range: FOO_LOWER_DISTANCE - FOO_UPPER_DISTANCE
      </p>
    </div>
    <div
      className="flex-100 layout-row layout-align-start-center layout-wrap"
    >
      <div
        className="flex-25 layout-row layout-wrap layout-align-start-start"
      >
        <div
          className="flex-100 layout-row layout-align-start-center"
        >
          <p
            className="flex-none sup"
          >
            Minimum charge (Flat Rate)
          </p>
        </div>
        <div
          className="flex-100 layout-row layout-align-start-center input_box"
        >
          <input
            name="0-minimum"
            onChange={[Function]}
            type="number"
          />
        </div>
      </div>
      <div
        className="flex-25 layout-row layout-wrap layout-align-start-start"
        key="ws_0"
      >
        <div
          className="flex-100 layout-row layout-align-start-center"
        >
          <p
            className="flex-none sup"
          >
            FOO_MIN - FOO_MAX FOO_RATEBASIS_LABEL / FOO_CURRENCY_LABEL
          </p>
        </div>
        <div
          className="flex-100 layout-row layout-align-start-center input_box"
        >
          <input
            name="0-0"
            onChange={[Function]}
            type="number"
            value="FOO_CELL_VALUE"
          />
        </div>
      </div>
    </div>
  </div>
</TruckingDistancePanel>
`;

exports[`loadType.value === fcl 1`] = `
<TruckingDistancePanel
  cells={
    Array [
      Object {
        "lower_distance": "FOO_LOWER_DISTANCE",
        "table": Object {
          "0": Object {
            "value": "FOO_CELL_VALUE",
          },
        },
        "upper_distance": "FOO_UPPER_DISTANCE",
      },
    ]
  }
  currency={
    Object {
      "label": "FOO_CURRENCY_LABEL",
    }
  }
  handleFCLChange={[Function]}
  handleMinimumChange={[Function]}
  handleRateChange={[Function]}
  loadType={
    Object {
      "value": "fcl",
    }
  }
  rateBasis={
    Object {
      "label": "FOO_RATEBASIS_LABEL",
    }
  }
  t={[Function]}
  theme={
    Object {
      "colors": Object {
        "primary": "#333",
        "secondary": "#fafafa",
      },
    }
  }
  weightSteps={
    Array [
      Object {
        "city": "FOO_CITY",
        "country": "FOO_COUNTRY",
        "max": "FOO_MAX",
        "min": "FOO_MIN",
      },
    ]
  }
>
  <div
    className="flex-100 layout-row layout-align-start-center layout-wrap"
    key="cell_0"
  >
    <div
      className="flex-50 layout-row layout-row layout-wrap layout-align-start-start"
    >
      <p
        className="flex-none"
      >
        Distance Range: FOO_LOWER_DISTANCE - FOO_UPPER_DISTANCE
      </p>
    </div>
    <div
      className="flex-100 layout-row layout-align-start-center layout-wrap"
    >
      <div
        className="flex-25 layout-row layout-wrap layout-align-start-start"
      >
        <div
          className="flex-100 layout-row layout-align-start-center"
        >
          <p
            className="flex-none sup"
          >
            Minimum charge (Flat Rate)
          </p>
        </div>
        <div
          className="flex-100 layout-row layout-align-start-center input_box"
        >
          <input
            name="0-minimum"
            onChange={[Function]}
            type="number"
          />
        </div>
      </div>
      <div
        className="flex-25 layout-row layout-wrap layout-align-start-start"
        key="ws_0"
      >
        <div
          className="flex-100 layout-row layout-align-start-center"
        >
          <p
            className="flex-none sup"
          >
            CHASSI Rate FOO_RATEBASIS_LABEL / FOO_CURRENCY_LABEL
          </p>
        </div>
        <div
          className="flex-100 layout-row layout-align-start-center input_box"
        >
          <input
            name="0-chassi_rate"
            onChange={[Function]}
            type="number"
          />
        </div>
      </div>
      <div
        className="flex-25 layout-row layout-wrap layout-align-start-start"
        key="ws_0"
      >
        <div
          className="flex-100 layout-row layout-align-start-center"
        >
          <p
            className="flex-none sup"
          >
            SIMA Rate FOO_RATEBASIS_LABEL / FOO_CURRENCY_LABEL
          </p>
        </div>
        <div
          className="flex-100 layout-row layout-align-start-center input_box"
        >
          <input
            name="0-sima_rate"
            onChange={[Function]}
            type="number"
          />
        </div>
      </div>
    </div>
  </div>
</TruckingDistancePanel>
`;
